src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_InvalidCtorParams.xaml
<DockPanel
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
>     
   <DockPanel.Resources>   
	<SolidColorBrush x:Key="RedBrush">Red</SolidColorBrush>
	<SolidColorBrush x:Key="BlueBrush">Blue</SolidColorBrush>
   </DockPanel.Resources>

   <Button Background="{StaticResource RedBrush, BlueBrush}" />    
      
</DockPanel>